finalizanion main part